# Basic-REST-API

./: Lab_back.sln  Postman.lnk  README.md  Tasks.docx  Розклад.xlsx
English/: Make.docx  vocabulary.docx  ~$Make.docx
Lab_back/: Program.cs
Lab_back/Entities/: Category.cs  Record.cs  User.cs
Lab_back/Properties/: launchSettings.json
Lab_back/Properties/PublishProfiles/: Base-REST-API-20221026203626 - Web Deploy.pubxml
Lab_back/Properties/ServiceDependencies/Base-REST-API-20221026203626 - Web Deploy/: profile.arm.json
Lab_back/wwwroot/: index.html
Languages/C/: C.sln
Languages/C/C/: C.cpp  C.rc  C.vcxproj  C.vcxproj.filters  Resource.h
Languages/English/: vocabulary.docx  ~$cabulary.docx
Languages/Java/: HelloWorld.java
Languages/Lab1/: Lab1.sln
Languages/Lab1/Lab1/: Dockerfile  Lab1.csproj  Program.cs
Languages/Lab1/Lab1/Properties/: launchSettings.json
Studying/.NET/EF_demo/CodeFirst/: README.txt
Studying/.NET/EF_demo/EDMDemo/: readme.txt
Studying/.NET/SimplestMultiLayerApp2/: SimplestMultiLayerApp2.sln
Studying/AI/: Lab1.0.ipynb  Lab1.ipynb  Янишин Віталій ІП-03.docx
Studying/Back-end/: Lab1.postman_collection.json
Studying/Other/FirstWebApp/: FirstWebApp.sln
Studying/ОС/Allocator/: Allocator.sln
Studying/ОС/allocator-3/: CMakeLists.txt
Studying/ОС/allocator-3/src/: CMakeLists.txt  allocator.c  allocator.h  allocator_impl.h  block.c  block.h  kernel.c  kernel.h  main.c
Studying/Право/: ІП-03_Янишин_Віталій_24.10.22.docx  Загальна_характеристика_правової_системи_Куби_Янишин.docx  Політичний_устрій_Куби_Янишин.docx
(+58 files in other folders)
